cmake_minimum_required(VERSION 3.16)

project(ton-index-cpp)

add_subdirectory(external/ton EXCLUDE_FROM_ALL)
add_subdirectory(external/libpqxx EXCLUDE_FROM_ALL)
add_subdirectory(external/clickhouse-cpp EXCLUDE_FROM_ALL)
add_subdirectory(external/hiredis EXCLUDE_FROM_ALL)
set(HIREDIS_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/external)
set(HIREDIS_LIB hiredis)
set(REDIS_PLUS_PLUS_BUILD_TEST OFF)
add_subdirectory(external/redis-plus-plus EXCLUDE_FROM_ALL)
set(MSGPACK_USE_BOOST OFF)
set(MSGPACK_USE_STD_VARIANT_ADAPTOR ON)
add_subdirectory(external/msgpack-c EXCLUDE_FROM_ALL)

add_subdirectory(tondb-scanner)
add_subdirectory(ton-index-postgres)
add_subdirectory(ton-index-clickhouse)
add_subdirectory(ton-integrity-checker)
add_subdirectory(ton-trace-emulator)
